portainer.sapphiretech.cc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - portainer.sapphiretech.cc
      secretName: portainer-tls
  ingressClassName: nginx
  rules:
    - host: "portainer.sapphiretech.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: portainer
                port:
                  number: 9000
